--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "verifactu-proxy",
+  "name": "verifactu-microservicio",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.0"
   }
 }
